# alphapack

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
data/: data.ipynb  packages.csv  random.ipynb  uld.csv
frontend/: inference.html  script.js  styles.css
src/: CMakeLists.txt  augment_sample.py  bin_packing_solver.cc  config.py  container.cc  container.h  container_solver.cc  episode_generator.cc  episode_generator.h  evaluation_queue.cc  evaluation_queue.h  generate.py  generate_episode.cc  generate_episode.h  inference.py  inference_queue.h  inference_server.py  main.cc  mcts.h  policy_value_network.py  run.py  server.py  test.cc  train.py  unflatten.py  worker.py
src/container-solver/: CMakeLists.txt  array2d.h  broker.py  container.cc  container.h  container_solver.cc  episode_generator.cc  episode_generator.h  inference_server.py  mcts.h  package.cc  package.h  package_generator.cc  package_generator.h  package_utils.py  policy_value_network.py  test.cc  train.cc  train.py  train_host.py  unflatten.py  worker.py
src/mcts/: CMakeLists.txt  array2d.h  array3d.h  evaluation.h  generate_episode.cc  generate_episode.h  generate_init_states.cc  generate_init_states.h  inference_queue.cc  inference_queue.h  item.h  mcts.cc  mcts.h  mcts_async.h  mcts_common.h  state.cc  state.h  training_sample.cc  training_sample.h  tree_statistics.cc  tree_statistics.h
